# python-sandbox

./: .gitignore  LICENSE  Makefile  README.md
.github/workflows/: invoke.yml  pipeline.yml  test-results.yml
palindrome/: Makefile  README.md  pyproject.toml  tasks.py
palindrome/palindrome/: get_palindrome.py
palindrome/src/: palindrome.py
palindrome/tests/: test_palindrome.py
palindrome/tests/robot/: test_palindrome.robot
